# FellowTravelers_FastAPI

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
app/: database.py  main.py  test_data.py
app/handlers/: points.py  regions.py  travels.py  users.py
app/models/: points.py  regions.py  travels.py  users.py
app/routes/: points.py  regions.py  travels.py  users.py
app/schemes/: __init__.py  points.py  regions.py  travels.py  users.py
